Fix some images are not responsive

--- a/PaperTheme/sass/style.scss
+++ b/PaperTheme/sass/style.scss
@@ -104,7 +104,7 @@ iframe
   margin-bottom: 15px;
 }
 
-.size-thumbnail,.size-medium,.size-large,.size-full{
+.size-thumbnail,.size-medium,.size-large,.size-full, .aligncenter, .alignnone, .alignleft, .alignright{
   display: block;
   max-width: 100%;
   height: auto;
